# ABG_team

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  Bo_sung_D6_Pipeline.md  Bo_sung_Truc_W_Wellbeing.md  Problems_Brief.md  README.md  RULES.md  docker-compose.yml  plan.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: config.py  database.py  main.py
backend/app/agent/: __init__.py  grounded.py  (+15 more)
backend/scripts/: generate_agent_eval_report.py  score_agent_eval_offline.py
backend/tests/: README.md  auth_helpers.py  conftest.py  test_advisor_roster.py  test_agent_eval_suite_integrity.py  test_agent_turns_sse.py  test_attendance_week_rollup.py  test_care_case_persist.py  test_case_transitions.py  test_case_viewed.py  test_class_scope.py  test_d6_ops.py  test_dwh_migrate.py  test_fairness_report_contract.py  test_generate_synthetic.py  test_h02_review_case_api.py  test_h03_care_workflow.py  test_h04_threshold_fairness_api.py  test_h08_linked_attendance.py  test_h08_read_adapter.py  test_h18_api_mvp_quarantine.py  test_h20_import.py  test_h20_import_gates.py  test_h22_advisor_handoff_draft_api.py  test_h23_agent_context.py  test_h24_agent_api.py  test_h25_fpt_transport.py  test_h25_grounding.py  test_h26_agent_e2e.py  test_h29_openai_transport.py  test_h30_h31_weekly_workflow.py  test_h32_h34_weekly_core.py  test_h34_weekly_router.py  test_h35_advisor_draft_v2.py  test_h36_rbac.py  test_h37_agent_turns.py  test_h38_export.py  test_h39_auth.py  test_h39_rbac_api.py  test_health.py  (+18 more)
(+368 files in other folders)
