[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silent-shield-backend"
version = "0.1.0"
description = "Silent Shield API — VAIC 2026"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13.0",
  "argon2-cffi>=23.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8.0",
  "httpx>=0.27",
]
ml = [
  "scikit-learn>=1.5,<1.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "slow: long-running tests",
  "eval: LLM evaluation (costs tokens)",
]

[tool.ruff]
line-length = 100
target-version = "py39"
